--- a/_data/people.yml
+++ b/_data/people.yml
@@ -24,8 +24,8 @@ jason:
     twitter: http://twitter.com/jasonbelldata
     image: jason-bw.jpg
     profile: |
-      Jason is author of <i>Machine Learning: Hands On For Developers and Technical Professionals</i> and was previously section editor of Java Developer's Journal. He specialises in large scale data pipelines, machine learning and deep learning.<p>
-      Since 1993 Jason has played the Chapman Stick, he also writes and teaches about technology, data and automation. 
+      Jason is author of <i>Machine Learning: Hands On For Developers and Technical Professionals</i> and was previously section editor of Java Developer's Journal. He specialises in large scale data pipelines, machine learning, and deep learning.<p>
+      Since 1993 Jason has played the Chapman Stick, he also writes about and teaches technology, data and automation. 
 elise:
     name: Elise Huard
     position: Data Engineer
